# zfun

./: .gitignore  README.md  build.gradle  channel_arm_list.txt  gradle.properties  publish-maven.gradle  settings.gradle  version-config.gradle
apk/: build.gradle
apk/src/main/: AndroidManifest.xml  read.txt
apk/src/otherApp/: read.txt
audio/: build.gradle
audio/src/main/: AndroidManifest.xml
component-annotation/init_processor/: build.gradle
component-gradle/gradle-fun/: build.gradle
component-gradle/gradle_fun/: README.md
component-gradle/inject-plugin/: build.gradle  gradle.properties
component-gradle/inject_plugin/: build.gradle
component-gradle/lib-android_transform/: build.gradle
component-init/: README.md
component-init/init-annotation/: gradle.properties
component-init/init-api/: build.gradle  gradle.properties
component-init/init-compiler/: build.gradle  gradle.properties
component-init/init-gradle-plugin/: build.gradle  gradle.properties
component-register/register-annotation/: build.gradle  gradle.properties
component-register/register-api/: build.gradle  gradle.properties
component-register/register-compiler/: build.gradle  gradle.properties
component-register/register-gradle-plugin/: build.gradle  gradle.properties
component-structure/component-1/app/: build.gradle
component-structure/component-1/app/src/main/: AndroidManifest.xml
component-structure/component-1/base/: build.gradle
component-structure/component-1/base/src/main/: AndroidManifest.xml
component-structure/component-1/bridge/: build.gradle
component-structure/component-1/bridge/src/main/: AndroidManifest.xml
component-structure/component-1/module1/: build.gradle
component-structure/component-1/module1/src/main/: AndroidManifest.xml
component-structure/component-1/module2/: build.gradle
component-structure/component-1/module2/src/main/: AndroidManifest.xml
component-structure/component-1/module3/: build.gradle
component-structure/component-1/module3/src/main/: AndroidManifest.xml
component-structure/component-2/app/: build.gradle
component-structure/component-2/app/src/main/: AndroidManifest.xml
component-structure/doc/: Android注解处理和插桩.md  组件化结构.md
component-structure/initProcessor/: build.gradle
diagramsCore/: build.gradle
diagramsCore/src/main/: AndroidManifest.xml
diagramsCore/src/main/res/values/: strings.xml
diagramsF/: build.gradle
diagramsF/gradle/wrapper/: gradle-wrapper.properties
diagramsF/src/main/res/values/: attrs.xml  themes.xml
diagramsLib/: build.gradle
diagramsLib/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
gradleFun/: downloadDep2LocalMaven.gradle  downloadDependencies.gradle
injectPlugin/: build.gradle
learn/: build.gradle
learn/src/main/: AndroidManifest.xml
learn/src/main/res/values/: strings.xml
my_flutter/: pubspec.yaml
myflutter/: README.md  pubspec.yaml
myflutter/test/: widget_test.dart
observerUninstall/: CMakeLists.txt  build.gradle
observerUninstall/gradle/wrapper/: gradle-wrapper.properties
observerUninstall/src/androidTest/java/com/diagramsj/test/jniclass/: ApplicationTest.java
observerUninstall/src/main/: AndroidManifest.xml
observerUninstall/src/main/cpp/: ObserverUninstall.c
observerUninstall/src/main/java/com/diagramsj/test/jniclass/: ObserverUninstall.java
observerUninstall/src/test/java/com/diagramsj/test/jniclass/: ExampleUnitTest.java
observer_uninstall/: README.md  build.gradle
observer_uninstall/src/main/: AndroidManifest.xml
observer_uninstall/src/main/cpp/: ObserverUninstall.c
repo/com/zfun/funmodule/GradleMoudlePlugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
repo/com/zfun/funmodule/com.zfun.funmodule.gradle.plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/res/color/: list_item_selector.xml
sample/src/main/res/layout/: activity_binary.xml  activity_io.xml  activity_letter_navigation.xml  activity_main.xml  activity_pullrefresh.xml  activity_use_case_test.xml  activity_xpullrefresh.xml  list_item.xml
sharelib/: build.gradle  consumer-rules.pro  proguard-rules.pro  sdk-consumer-rules.pro  sdk-proguard-rules.pro
sharelib/src/main/: AndroidManifest.xml
sharelib/src/main/res/layout/: dialog_bottom_round.xml  layout_share_dialog.xml  share_provider_item.xml
sharelib/src/main/useQQ/: AndroidManifest.xml
simple/: build.gradle
simple/gradle/wrapper/: gradle-wrapper.properties
simple/src/main/: AndroidManifest.xml
src/main/: AndroidManifest.xml
src/main/jni/: Android.mk  Application.mk  com_diagramsj_test_jniclass_ObserverUninstall.c  com_diagramsj_test_jniclass_ObserverUninstall.h
src/main/res/drawable-xxhdpi/: drawable_msg_bubble.xml
src/main/res/values/: attrs.xml
xposedmodule/: build.gradle  lib.gradle  readme.md  version.gradle
xposedmodule/src/main/: AndroidManifest.xml
xposedmodule/src/main/assets/: xposed_init
zfunLib/: .gitignore  build.gradle
zfunLib/src/main/: AndroidManifest.xml
(+922 files in other folders)
